--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/markdoc": "^0.7.2",
     "@astrojs/starlight": "^0.12.0",
+    "@types/json-schema": "^7.0.15",
     "astro": "^3.2.3",
     "sharp": "^0.32.5"
   }
